<resources>
    <string name="app_name">PersonFinder</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_map">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_interest">My Interests</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="re_confirm_password">Re-confirm Password</string>
    <string name="password_donot_match">Passwords donot match.</string>
    <string name="success">Success!</string>
    <string name="password_change_success_msg">Password has been changed successfully.</string>
    <string name="password_change_error_msg">An unknown error occurred while changing the password.</string>
    <string name="error">Error!</string>
    <string name="incorrect_old_password">Incorrect old password.</string>
    <string name="change_pass_w8_msg">Changing password, please wait.</string>
    <string name="loding">Loading...</string>
    <string name="reset_password_success_message">Successfully reset yout password, please check your email.</string>
    <string name="conact_message">Thanks for reaching out,\nour team will be happy to support you.</string>
    <string name="call_us">Call Us</string>
    <string name="email_us">Email Us</string>
    <string name="none">none</string>
    <string name="swal_text_settings">Settings</string>
    <string name="swal_text_cancel">Cancel</string>
    <string name="swal_text_warning">Warning</string>
    <string name="swal_text_yes">Yes</string>
    <string name="swal_text_no">No</string>
    <string name="swal_text_confirmation">Confirmation</string>
    <string name="swal_text_confirmation_logout">Are you sure, you want to logout ?</string>
    <string name="permission_location">This application needs GPS location permission to proceed, Please enable GPS permission from settings.</string>
    <string name="permission_call">This application needs calling permission to proceed, Please enable calling permission from settings.</string>
    <string name="permission_camera">This application needs calling permission to proceed, Please enable Camera permission from settings.</string>
    <string name="permission_gallery">This application needs calling permission to proceed, Please enable External Storage permission from settings.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title">title</string>
    <string name="sending_verification">Sending verification code.</string>
    <string name="request_new_password">Request New Password</string>
    <string name="enter_you_email_address">Enter you Email Address</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_or_phone">Email Address/Phone Number</string>
    <string name="username">Username</string>
    <string name="error_title">Error</string>
    <string name="error_internet_not_connected">Internet not connected</string>
    <string name="error_invalid_full_name">Please enter a valid full name with space(s)</string>
    <string name="error_invalid_credentials">Invalid Username or Password!</string>
    <string name="error_no_nearby_drivers">No nearby drivers found</string>
    <string name="invalidPasswordError">Please enter a valid 14 digits password.</string>
    <string name="generic_title_ok">OK</string>
    <string name="generic_text_loading">Loading ...</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="sign_up_with_facebook">Sign Up with facebook</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="your_e_mail_goes_here">Your e-mail goes here</string>
    <string name="your_e_mail_goes_here_optional">Your e-mail goes here (Optional)</string>
    <string name="password_hint">*************</string>
    <string name="phone_number">Phone Number</string>
    <string name="_92">+92</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_signup_with_eclinic_cars_you_agree">By Signing Up with E-Clinic you agree</string>
    <string name="to_the">to the</string>
    <string name="terms_and_conditions"> terms and conditions</string>
    <string name="password">Password</string>
    <string name="dob">Date of Birth</string>
    <string name="toast_message_back_exit">Please click BACK again to exit</string>
    <string name="text_forgot_pw_help">Enter 14-digit password provided by the Company</string>
    <string name="text_forgot_enter_pw">ENTER PASSWORD</string>
    <string name="text_resend_password">Resend Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_hint_user_id">USER EMAIL</string>
    <string name="text_hint_password">PASSWORD</string>
    <string name="text_forgot_password">Forgot Password?</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_signing_in">Signing in...</string>
    <string name="text_signing_up">Signing up...</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="drawer_open">drawer open</string>
    <string name="drawer_close">drawer close</string>
    <string name="fontPathbold">fonts/AvenirNextLTProBold.otf</string>
    <string name="fontPathSemibold">fonts/AvenirNextLTProDemi.otf</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_doctor">Add doctor</string>
    <string name="send_me_a_new_password">Send me a new password</string>
    <string name="text_find_doctors">Find a best doctor for your help \nand your family.</string>
    <string name="info">Info</string>
    <string name="unable_to_sign_in_with_google">Unable to sign in with google.</string>
    <string name="by_signingup_with_you_agree">By Signing Up you agree</string>
    <string name="doctor">Doctor</string>
    <string name="user">User</string>
    <string name="my_appointments">My Appointments</string>
    <string name="search_for_questions">Search for Questions</string>
    <string name="logout">Logout</string>
    <string name="bit6_api_key">3yrr9-DMI11ZuoC9Ti</string>
    <string name="register">Register</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="answer_call">Answer</string>
    <string name="reject_call">Reject</string>
    <string name="main_username_hint">User name</string>
    <string name="main_password_hint">Password</string>
    <string name="main_login">Login</string>
    <string name="main_signup">Sign Up</string>
    <string name="chat_menu_video_call">Video Call</string>
    <string name="chat_menu_voice_call">Voice Call</string>
    <string name="chat_menu_group_details">Group Details</string>
    <string name="chat_menu_group_delete">Delete Group</string>
    <string name="compose_choose_photo">Choose Photo</string>
    <string name="compose_take_photo">Take Photo</string>
    <string name="compose_record_video">Record Video</string>
    <string name="compose_share_location">Share Location</string>
    <string name="chats_menu_pstn_call">Phone Call</string>
    <string name="chats_menu_direct_chat">Direct Chat</string>
    <string name="chats_menu_create_group">Create Group</string>
    <string name="pstn_dialog_phone_number_hint">+1 (xxx) xxx-xxxx </string>
    <string name="pstn_dialog_message">Call a US or Canada phone</string>
    <string name="pstn_dialog_title">Test Phone Call</string>
    <string name="direct_chat_dialog_title">Direct Chat</string>
    <string name="create_group_dialog_title">Create Group</string>
    <string name="call_add_participant_dialog_title">Select Contact</string>
    <string name="incoming_call_text">%1$s is calling …</string>
    <string name="incoming_call">Incoming call </string>
    <string name="incoming_call_answer">Answer</string>
    <string name="incoming_call_reject">Reject</string>
    <string name="group_menu_edit_title">Edit Title</string>
    <string name="group_menu_delete_group">Delete Group</string>
    <string name="group_invite_member_button">Invite Member</string>
    <string name="group_invite_member_dialog_title">Invite Member</string>
    <string name="error_invalid_phone_number">Invalid phone number</string>
    <string name="error_incorrect_credentials">Incorrect username/password</string>
    <string name="dev">Development</string>
    <string name="prod">Production</string>
    <string name="media_mode">Media Mode</string>
    <string name="environment">Environment</string>
    <string name="api_key">API key</string>
    <string name="websocket">Websocket</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected</string>
    <string name="my_identity">Own identity</string>
    <string name="display_name">Display name</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="language">Language</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="domain_name">\@telepolyclinic.com</string>
    <string name="availability">Availability</string>
    <string name="all_app_version">Sample UI v%1$s / SDK v%2$s</string>
    <string name="all_create">Create</string>
    <string name="all_invite">Invite</string>
    <string name="all_group_channels">Group Channels</string>
    <string name="all_open_channels">Open Channels</string>
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="select_channel_type">Select channel type</string>
    <string name="settings">Settings</string>
    <string name="blocked_members_list">Blocked members</string>
    <string name="login_user_id">User ID</string>
    <string name="login_user_nickname">Nickname</string>
    <string name="login_connect">Connect</string>
    <string name="login_disconnect">Disconnect</string>
    <string name="open_channel_list_participant_count">%1$d participants</string>
    <string name="create_open_channel">Create Open Channel</string>
    <string name="participant_list">Participants</string>
    <string name="group_channel_list_file_message_text">%1$s has uploaded a file.</string>
    <string name="create_group_channel">Create Group Channel</string>
    <string name="member_list">Members</string>
    <string name="invite_member">Invite members</string>
    <string name="member_info"></string>
    <string name="open_channel_chat_content_desc_profile">Profile image</string>
    <string name="action_create_channel">Create channel</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="company_name">Company Name</string>
    <string name="skip"><u>Skip</u></string>
    <string name="login">LOGIN</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="select_a_profile_picture_n_optional">Select a profile picture\n(Optional)</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_post">Create Post</string>
</resources>