<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.personfinder.ui.person_listing.fragment.PersonListingFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_person_listing" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.personfinder.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_create_post"
        android:name="com.example.personfinder.ui.create_post.CreatePostFragment"
        android:label="@string/create_post"
        tools:layout="@layout/fragment_create_post" />


</navigation>