<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPurple"
    android:paddingTop="@dimen/dimen_16dp">

    <TextView
        android:id="@+id/language_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:text="EN"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dimen_17sp" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:text="@string/skip"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/dimen_17sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/language_btn"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/login_form_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/dimen_16dp">

            <ImageView
                android:id="@+id/logo_iv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_80dp"
                android:src="@drawable/new_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NEW OFFERS WEB"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/dimen_17sp" />

            <EditText
                android:id="@+id/user_id_et"
                android:layout_width="@dimen/dimen_300dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_33dp"
                android:background="@drawable/background_grey_stroke_rectangle"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_10dp"
                android:text="bassam@gmail.com"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="@dimen/dimen_300dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:background="@drawable/background_grey_stroke_rectangle"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_10dp"
                android:scrollHorizontally="true"
                android:text="123456"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorTextHint"
                android:textSize="13sp" />


            <Button
                android:id="@+id/sign_in_btn"
                style="@style/NonCapsButton"
                android:layout_width="@dimen/dimen_300dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:background="@drawable/background_button_pink_5dp"
                android:text="@string/login"
                android:textColor="@color/colorWhite"
                android:textSize="19sp" />

            <LinearLayout
                android:layout_width="@dimen/dimen_300dp"
                android:layout_height="@dimen/dimen_40dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:background="@drawable/background_button_fb_5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/dimen_25dp"
                    android:layout_height="@dimen/dimen_20dp"
                    android:layout_marginRight="@dimen/dimen_8dp"
                    android:clickable="false"
                    android:src="@drawable/facebook"
                    android:translationZ="@dimen/dimen_12dp"
                    app:tint="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_with_facebook"
                    android:textColor="@color/colorWhite"
                    android:textSize="19sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/forgot_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:text="@string/text_forgot_password"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:text="@string/register"
                android:textColor="@color/colorWhite"
                android:textSize="17sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
