<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="@dimen/_16ssp">

        <TextView
            android:id="@+id/language_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_16ssp"
            android:text="EN"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_18ssp" />

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_16ssp"
            android:text="@string/skip"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_18ssp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/language_btn"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/login_form_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/_16ssp">

                <ImageView
                    android:id="@+id/logo_iv"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_100ssp"
                    android:src="@drawable/new_logo_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Person Finder"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_17ssp" />

                <EditText
                    android:id="@+id/user_id_et"

                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40ssp"
                    android:layout_marginStart="@dimen/_10ssp"
                    android:layout_marginTop="@dimen/_33ssp"
                    android:layout_marginEnd="@dimen/_10ssp"
                    android:background="@drawable/background_grey_stroke_rectangle"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:paddingStart="@dimen/_10ssp"
                    android:paddingEnd="@dimen/_10ssp"
                    android:text="bassam@gmail.com"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/_13ssp" />

                <EditText
                    android:id="@+id/password_et"

                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40ssp"
                    android:layout_marginStart="@dimen/_10ssp"
                    android:layout_marginTop="@dimen/_16ssp"
                    android:layout_marginEnd="@dimen/_10ssp"
                    android:background="@drawable/background_grey_stroke_rectangle"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:scrollHorizontally="true"
                    android:text="123456"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="@dimen/_13ssp" />


                <Button
                    android:id="@+id/sign_in_btn"
                    style="@style/NonCapsButton"
                    android:layout_width="match_parent"

                    android:layout_height="@dimen/_40ssp"
                    android:layout_marginStart="@dimen/_10ssp"
                    android:layout_marginTop="@dimen/_30ssp"
                    android:layout_marginEnd="@dimen/_10ssp"
                    android:background="@drawable/background_button_pink_5dp"
                    android:text="@string/login"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_13ssp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40ssp"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_10ssp"
                    android:layout_marginTop="@dimen/_30ssp"
                    android:layout_marginEnd="@dimen/_10ssp"
                    android:background="@drawable/background_button_fb_5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_25ssp"
                        android:layout_height="@dimen/_20ssp"
                        android:layout_marginEnd="@dimen/_8ssp"
                        android:clickable="false"
                        android:src="@drawable/facebook"
                        android:translationZ="@dimen/_12ssp"
                        app:tint="@color/colorWhite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_with_facebook"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_13ssp"

                        />

                </LinearLayout>

                <TextView
                    android:id="@+id/forgot_password_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30ssp"
                    android:text="@string/text_forgot_password"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/_13ssp"

                    />

                <TextView
                    android:id="@+id/register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_30ssp"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite"
                    android:textSize="17sp"

                    />

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
</layout>
