<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:fbutton="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPurple">

        <ImageView
            android:id="@+id/back"
            android:layout_margin="@dimen/dimen_8dp"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_56dp"
            android:padding="@dimen/dimen_10dp"
            android:src="@drawable/back_arrow"/>

        <ScrollView
            android:layout_below="@id/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/login_form_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dimen_16dp"
                android:paddingRight="@dimen/dimen_16dp"
                android:paddingBottom="@dimen/dimen_16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textSize="@dimen/dimen_21sp"/>

                <ImageView
                    android:layout_width="@dimen/dimen_90dp"
                    android:layout_height="@dimen/dimen_90dp"
                    android:src="@drawable/camera"
                    android:clickable="false"
                    android:layout_margin="@dimen/dimen_16dp"
                    app:tint="@color/colorWhite" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="@string/select_a_profile_picture_n_optional"
                    android:textAllCaps="true"
                    android:gravity="center"
                    android:textSize="@dimen/dimen_13sp"/>

                <EditText
                    android:id="@+id/user_name_et"
                    android:layout_width="@dimen/dimen_300dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:hint="@string/username"
                    android:layout_marginTop="@dimen/dimen_33dp"
                    android:inputType="text"
                    android:text=""
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:paddingRight="@dimen/dimen_10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextHint"
                    android:background="@drawable/background_grey_stroke_rectangle"
                    android:textSize="13sp"
                    />

                <EditText
                    android:id="@+id/user_id_et"
                    android:layout_width="@dimen/dimen_300dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:hint="@string/email_address"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:inputType="textEmailAddress"
                    android:text=""
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:paddingRight="@dimen/dimen_10dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextHint"
                    android:background="@drawable/background_grey_stroke_rectangle"
                    android:textSize="13sp"
                    />

                <EditText
                    android:id="@+id/password_et"
                    android:layout_width="@dimen/dimen_300dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text=""
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:paddingRight="@dimen/dimen_10dp"
                    android:background="@drawable/background_grey_stroke_rectangle"
                    android:scrollHorizontally="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="13sp"
                    />

                <EditText
                    android:id="@+id/re_password_et"
                    android:layout_width="@dimen/dimen_300dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text=""
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:paddingRight="@dimen/dimen_10dp"
                    android:background="@drawable/background_grey_stroke_rectangle"
                    android:scrollHorizontally="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="13sp"
                    />

                <EditText
                    android:id="@+id/company_et"
                    android:layout_width="@dimen/dimen_300dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    android:text=""
                    android:hint="@string/company_name"
                    android:inputType="text"
                    android:paddingLeft="@dimen/dimen_10dp"
                    android:paddingRight="@dimen/dimen_10dp"
                    android:background="@drawable/background_grey_stroke_rectangle"
                    android:scrollHorizontally="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorTextHint"
                    android:textSize="13sp"
                    />




                <Button
                    android:id="@+id/sign_up_btn"
                    style="@style/NonCapsButton"
                    android:layout_marginTop="@dimen/dimen_30dp"
                    android:layout_width="@dimen/dimen_200dp"
                    android:layout_height="@dimen/dimen_40dp"
                    android:text="@string/register"
                    android:textColor="@color/colorWhite"
                    android:textSize="19sp"
                    android:background="@drawable/background_button_pink_5dp"/>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>
